--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,12 @@
 .App-link {
   color: #61dafb;
 }
+
+.Language-button {
+  padding: 4px 16px;
+  font-size: 18px;
+}
+
+.Language-button + .Language-button {
+  margin-left: 10px;
+}
